--- a/Node_Practice/To-Do_List/tasks.json
+++ b/Node_Practice/To-Do_List/tasks.json
@@ -14,5 +14,9 @@
   {
     "text": "try something new",
     "completed": false
+  },
+  {
+    "text": "my new task",
+    "completed": true
   }
 ]
